Revert "Sidebar alignment fix"
This reverts commit f277f8152c77ed8fd7730b11efb8a6e6941ad5d5.

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -12,6 +12,8 @@
     height: 200px;
     width: 325px;
     text-indent: -9999px;
+    margin-left: -10px;
+    margin-top: 10px;
   }
   
   // Theme Switcher
